--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 <body style="margin: 0; padding: 0;">
     <br>
     <div class="container">
-        <picture>
+      <a href= 'https://kassknee360degree.com/'> <picture>
             <source media="(max-width:500px)" style="max-width: 115%;
             height: auto;
             width: 139%;
             display: block;
-            margin: -15px;" srcset="Mobile.jpeg">
-            <source media="(max-width:650px)" srcset="Mobile.jpeg">
-            <source media="(max-width:768px)" srcset="DskNew.jpg">
-            <source media="(max-width:900px)" srcset="DskNew.jpg">
-            <source media="(max-width:1024px)" srcset="DskNew.jpg">
-            <source media="(max-width:1200px)" srcset="DskNew.jpg">
+            margin: -15px;" srcset="banner.jpeg">
+            <source media="(max-width:650px)" srcset="banner.jpeg">
+            <source media="(max-width:768px)" srcset="banner.jpeg">
+            <source media="(max-width:900px)" srcset="banner.jpeg">
+            <source media="(max-width:1024px)" srcset="banner.jpeg">
+            <source media="(max-width:1200px)" srcset="banner.jpeg">
             <img style="max-width: 108%;
             height: auto;
             width: 110%;
             display: block;
             margin: -28px; " 
-     src="DskNew.jpg" 
+     src="banner.jpeg" 
      alt="Desktop image">
 
-        </picture>
+        </picture></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
